--- a/src/vista/Ui/VistaRegistroCliente.ui
+++ b/src/vista/Ui/VistaRegistroCliente.ui
@@ -224,8 +224,8 @@
    <widget class="QLineEdit" name="Direccion">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>440</y>
+      <x>130</x>
+      <y>430</y>
       <width>161</width>
       <height>41</height>
      </rect>
@@ -288,6 +288,16 @@
     </property>
     <property name="text">
      <string>Volver</string>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="cmbUsuarios">
+    <property name="geometry">
+     <rect>
+      <x>440</x>
+      <y>430</y>
+      <width>151</width>
+      <height>31</height>
+     </rect>
     </property>
    </widget>
   </widget>
