--- a/src/vista/Ui/VistaRegistroCliente.ui
+++ b/src/vista/Ui/VistaRegistroCliente.ui
@@ -190,7 +190,7 @@
      <bool>false</bool>
     </property>
    </widget>
-   <widget class="QLineEdit" name="Email">
+   <widget class="QLineEdit" name="Correo">
     <property name="geometry">
      <rect>
       <x>430</x>
@@ -224,7 +224,7 @@
    <widget class="QLineEdit" name="Direccion">
     <property name="geometry">
      <rect>
-      <x>130</x>
+      <x>280</x>
       <y>430</y>
       <width>161</width>
       <height>41</height>
@@ -255,7 +255,7 @@
    <widget class="QPushButton" name="btnRegistrar">
     <property name="geometry">
      <rect>
-      <x>140</x>
+      <x>120</x>
       <y>520</y>
       <width>151</width>
       <height>41</height>
@@ -275,7 +275,7 @@
     <property name="geometry">
      <rect>
       <x>440</x>
-      <y>510</y>
+      <y>520</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -288,16 +288,6 @@
     </property>
     <property name="text">
      <string>Volver</string>
-    </property>
-   </widget>
-   <widget class="QComboBox" name="cmbUsuarios">
-    <property name="geometry">
-     <rect>
-      <x>440</x>
-      <y>430</y>
-      <width>151</width>
-      <height>31</height>
-     </rect>
     </property>
    </widget>
   </widget>
