--- a/src/vista/Ui/VistaOrdenesServicio.ui
+++ b/src/vista/Ui/VistaOrdenesServicio.ui
@@ -54,8 +54,8 @@
    <widget class="QPushButton" name="btnRegistrar">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>430</y>
+      <x>320</x>
+      <y>420</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -73,8 +73,8 @@
    <widget class="QPushButton" name="btnVolver">
     <property name="geometry">
      <rect>
-      <x>490</x>
-      <y>430</y>
+      <x>90</x>
+      <y>420</y>
       <width>151</width>
       <height>41</height>
      </rect>
@@ -141,6 +141,25 @@
       <family>Segoe UI</family>
       <pointsize>10</pointsize>
      </font>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnAsignar">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>420</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Asignar orden</string>
     </property>
    </widget>
   </widget>
