--- a/src/vista/Ui/VistaRecepcionista.ui
+++ b/src/vista/Ui/VistaRecepcionista.ui
@@ -76,7 +76,7 @@
    <widget class="QPushButton" name="btnRegistrarVehiculo">
     <property name="geometry">
      <rect>
-      <x>100</x>
+      <x>40</x>
       <y>310</y>
       <width>191</width>
       <height>71</height>
@@ -95,8 +95,8 @@
    <widget class="QPushButton" name="btnEmitirFacturas">
     <property name="geometry">
      <rect>
-      <x>460</x>
-      <y>320</y>
+      <x>510</x>
+      <y>310</y>
       <width>191</width>
       <height>71</height>
      </rect>
@@ -115,7 +115,7 @@
     <property name="geometry">
      <rect>
       <x>280</x>
-      <y>430</y>
+      <y>460</y>
       <width>191</width>
       <height>71</height>
      </rect>
@@ -128,6 +128,25 @@
     </property>
     <property name="text">
      <string>Cerrar Sesión</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="btnBajaVehiculos">
+    <property name="geometry">
+     <rect>
+      <x>280</x>
+      <y>310</y>
+      <width>191</width>
+      <height>71</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Dar de baja vehiculos</string>
     </property>
    </widget>
   </widget>
