--- a/src/vista/Ui/VistaDarDeBajaVehiculos.ui
+++ b/src/vista/Ui/VistaDarDeBajaVehiculos.ui
@@ -36,27 +36,11 @@
      <string>Dar de baja vehiculos</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tablVehiculos">
-    <property name="geometry">
-     <rect>
-      <x>590</x>
-      <y>210</y>
-      <width>391</width>
-      <height>241</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>3</number>
-    </property>
-    <column/>
-    <column/>
-    <column/>
-   </widget>
    <widget class="QPushButton" name="btnDardeBaja">
     <property name="geometry">
      <rect>
       <x>350</x>
-      <y>610</y>
+      <y>530</y>
       <width>381</width>
       <height>61</height>
      </rect>
@@ -74,8 +58,8 @@
    <widget class="QPushButton" name="btnVolver">
     <property name="geometry">
      <rect>
-      <x>1000</x>
-      <y>610</y>
+      <x>910</x>
+      <y>530</y>
       <width>361</width>
       <height>61</height>
      </rect>
@@ -98,6 +82,22 @@
       <width>411</width>
       <height>651</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboVehiculos">
+    <property name="geometry">
+     <rect>
+      <x>580</x>
+      <y>270</y>
+      <width>461</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
   </widget>
