--- a/src/vista/Ui/VistaEstadoActual.ui
+++ b/src/vista/Ui/VistaEstadoActual.ui
@@ -35,24 +35,6 @@
      <string>Estado Vehículo</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tablaEstadoActual">
-    <property name="geometry">
-     <rect>
-      <x>460</x>
-      <y>220</y>
-      <width>631</width>
-      <height>192</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>5</number>
-    </property>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-   </widget>
    <widget class="QPushButton" name="btnVolver">
     <property name="geometry">
      <rect>
@@ -80,6 +62,22 @@
       <width>411</width>
       <height>651</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboEstadoActual">
+    <property name="geometry">
+     <rect>
+      <x>340</x>
+      <y>260</y>
+      <width>881</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
   </widget>
