--- a/src/vista/Ui/VistaFacturas.ui
+++ b/src/vista/Ui/VistaFacturas.ui
@@ -35,25 +35,6 @@
      <string>Facturas</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tablaOrdenesFinalizadas">
-    <property name="geometry">
-     <rect>
-      <x>400</x>
-      <y>190</y>
-      <width>761</width>
-      <height>192</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>6</number>
-    </property>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-   </widget>
    <widget class="QPushButton" name="btnGenerarfactura">
     <property name="geometry">
      <rect>
@@ -100,6 +81,22 @@
       <width>411</width>
       <height>651</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboFacturas">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>260</y>
+      <width>881</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
   </widget>
