--- a/src/vista/Ui/VistaHistorialServicios.ui
+++ b/src/vista/Ui/VistaHistorialServicios.ui
@@ -35,24 +35,6 @@
      <string>Historial de Servicios</string>
     </property>
    </widget>
-   <widget class="QTableWidget" name="tablaServicios">
-    <property name="geometry">
-     <rect>
-      <x>450</x>
-      <y>220</y>
-      <width>641</width>
-      <height>201</height>
-     </rect>
-    </property>
-    <property name="columnCount">
-     <number>5</number>
-    </property>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-    <column/>
-   </widget>
    <widget class="QPushButton" name="btnVolver">
     <property name="geometry">
      <rect>
@@ -80,6 +62,22 @@
       <width>411</width>
       <height>651</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="comboHistorial">
+    <property name="geometry">
+     <rect>
+      <x>350</x>
+      <y>250</y>
+      <width>881</width>
+      <height>121</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>12</pointsize>
+     </font>
     </property>
    </widget>
   </widget>
