--- a/src/vista/Ui/VistaRegistroVehiculo.ui
+++ b/src/vista/Ui/VistaRegistroVehiculo.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RegistroVehiculo</class>
- <widget class="QMainWindow" name="RegistroVehiculo">
+ <class>QmainWindow</class>
+ <widget class="QMainWindow" name="QmainWindow">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -35,21 +35,11 @@
      <string>Registro del vehículo</string>
     </property>
    </widget>
-   <widget class="QComboBox" name="combo_clientes">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>200</y>
-      <width>321</width>
-      <height>61</height>
-     </rect>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="Matricula">
     <property name="geometry">
      <rect>
       <x>170</x>
-      <y>320</y>
+      <y>360</y>
       <width>501</width>
       <height>61</height>
      </rect>
@@ -73,8 +63,8 @@
    <widget class="QLineEdit" name="Marca">
     <property name="geometry">
      <rect>
-      <x>930</x>
-      <y>320</y>
+      <x>920</x>
+      <y>350</y>
       <width>481</width>
       <height>61</height>
      </rect>
@@ -99,7 +89,7 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>460</y>
+      <y>480</y>
       <width>511</width>
       <height>51</height>
      </rect>
@@ -124,7 +114,7 @@
     <property name="geometry">
      <rect>
       <x>930</x>
-      <y>460</y>
+      <y>470</y>
       <width>481</width>
       <height>51</height>
      </rect>
@@ -191,6 +181,22 @@
       <width>411</width>
       <height>651</height>
      </rect>
+    </property>
+   </widget>
+   <widget class="QComboBox" name="combo_clientes">
+    <property name="geometry">
+     <rect>
+      <x>610</x>
+      <y>210</y>
+      <width>351</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+     </font>
     </property>
    </widget>
   </widget>
